hack/envoy/envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: service
                virtual_hosts:
                - name: service
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/test"
                    direct_response:
                      status: 200
                      body:
                        inline_string: "this is a test"
                  - match:
                      prefix: "/"
                    route:
                      cluster: service
              http_filters:
                # - name: envoy.filters.http.wasm
                #   typed_config:
                #     "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                #     type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                #     value:
                #       config:
                #         name: "http_body"
                #         vm_config:
                #           runtime: "envoy.wasm.runtime.v8"
                #           code:
                #             local:
                #               filename: "/etc/envoy/proxy-wasm-plugins/wasm_envoy_proxy.wasm"
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    load_assignment:
      cluster_name: service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service
                port_value: 8080
